samples/_failures_safe/1760959889_8703f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63ba596e.c: In function ‘main’:
./samples/SAFE/__tmp_63ba596e.c:156:5: error: expected expression at end of input
  156 |     if (
      |     ^~
./samples/SAFE/__tmp_63ba596e.c:156:5: error: expected declaration or statement at end of input
